viewer/ui_style.css
body
{
    margin: 0px;
    overflow-x: hidden;
    overflow-y: hidden;
}

#mainContainer
{
    width: 100vw;
    height: 100vh;
    display: flex;
    flex-direction: row;
}

.containerHeader
{
    color: #f0f0f0;
    font-family: 'Questrial', sans-serif; 
    font-weight: 700;
}

#infoLayersContainer
{
    width: 300px;
    height: 100vh;
    /* position: fixed; */
    background: #303030;
    padding: 5 5 5 5;
    color: #d0d0d0;
    font-family: 'Questrial', sans-serif; 
    left: 0px;
    flex-basis: 300px;
    flex-direction: column;
}

.infoTable_divider
{
    width: 100%;
    height: 1px;
    background: #ffffff;
    display: block;
}

#cesiumContainer
{
    /* z-index: 1; */
    /* height: 100vh; */
    /* right: 0px; */
    width: calc(100vw - 300px);
}

#weatherReadout
{
    z-index: 10;
    right: 25px;
    bottom: 50px;
    width: 250px;
    max-height: 250px;
    position: absolute;
    color: #d0d0d0;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 14px;
    background: #303030;
    padding: 5 5 5 5;
    border-radius: 5pt;
    opacity: 0.8;
}

.weatherReadout_disabled
{
    display: none;
}

#weather_readout_title
{
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 20px;
    font-weight: bold;
}

#weather_readout_description
{
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 15px;
}

#weather_readout_content
{
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-size: 11px;
}

#groupsPanel
{
    z-index: 10;
    left: 10px;
    top: 25%;
    /*bottom: 200px;*/
    width: 350px;
    /* max-height: 500px; */
    position: fixed;
    background: #303030;
    padding: 5 5 5 5;
    color: #d0d0d0;
    font-family: 'Questrial', sans-serif; 
    border-radius: 5pt;
    opacity: 0.8;
}

/* 20190912 - moved to groupsContainer now */
#groupsTable
{
    overflow-y: scroll;
    overflow-x: hidden;
    /* max-height: 350px; */
    max-height: 60vh;
    display: block;
}

#groupsContainer
{
    overflow-y: scroll;
    overflow-x: hidden;
    /* max-height: 350px; */
    height: 50vh;
    max-height: 50vh;
    display: block;
    font-family: 'Questrial', sans-serif;
}

.groupsTable_grpCell
{
    width: 100%;
    height: 25px;
    color: #d0d0d0;
    text-align: left;
    user-select: none;
    font-weight: 700;
    
}
.infoLayers_maincategory
{

    border-top: 1.5px solid rgba(255,255,255,0.2);
}
.groupsTable_cbCell
{
    width: 50px;
    height: 25px;
    color: #d0d0d0;
    text-align: left;
    user-select: none;
}
li {
    list-style-type:none
}
.groupsTable_nameCell
{
    width: 280px;

    padding-left: 10px;
    color: #d0d0d0;
    
    user-select: none;
    border-top: 1px solid rgba(255,255,255,0.2);
}
.groupsTable_leafCell
{
    width: 90%;
    height: 30px;
    padding-left: 20px;
    color: #d0d0d0;
    user-select: none;
    text-align: left;
    line-height:40px;
    margin-top: 1px;
}

.groupsTable_nameCell_title
{
    width: 300px;
    color: #d0d0d0;
    font-family: 'Questrial', sans-serif;
}

.groupsTable_nameCell:hover
{
    font-weight: bold;
}

.groupsTable_toggleBtn
{
    width: 48px;
    height: 23px;
    background: #484048;
    color: #d0d0d0;
    border-width: 0px;
}

.groupsTable_toggleBtn_small
{
    width: 24px;
    height: 23px;
    background: #303030;
    border-width: 0px;
    font-size: 16px !important;
}

.groupsTable_toggleBtn_small:focus
{
    outline: none;
}

.groupsTable_toggleBtn_active
{
    color: #d0d0d0;
}

.groupsTable_toggleBtn_inactive
{
    color: #505050;
}

/* sites selector */
#sitesTable
{
   overflow-y: scroll;
    overflow-x: hidden;
    /* max-height: 350px; */
    height: 20vh;
    max-height: 20vh;
    display: block;
}

#sitesSelector
{
    -webkit-appearance: none;
    width: 100%;
    height: 25px;
    /* background: #383038; */
    
    color: #d0d0d0;
    font-family: 'Questrial', sans-serif;  
    user-select: none;
}

.siteList
{
    padding-inline-start: 0px;
}

.siteList:hover
{
    cursor: default;
}

.siteList_cityname
{
    font-weight: 800;
}

.siteList_sitename
{
    font-weight: 400;
    font-size: 11pt;
}

.siteList_sitename:hover
{
    font-weight: bold;
    cursor: pointer;
}

/* data layers selector */
#layersTable
{
    overflow-y: auto;
    overflow-x: hidden;
    /* max-height: 350px; */
    height: 20vh;
    max-height: 20vh;
    display: block;
}

.groupsTable_siteSelector_main
{
    width: 275px;
    height: 25px;
    color: #d0d0d0;
    font-family: 'Questrial', sans-serif;    
}

.groupsTable_siteSelector_icon
{
    width: 25px;
    height: 25px;
    color: #d0d0d0;
    font-family: 'Questrial', sans-serif;    
}

#loaderProgressDisplay
{
    z-index: 11;
    bottom: 240px;
    width: 400px;
    height: 120px;
    left: 0;
    right: 0;
    position: absolute;
    margin: auto auto;
    background: #383038;
    border-radius: 5pt;
    
}    

.progressHeader
{
    color: #d0d0d0;
    font-family: 'Questrial', sans-serif;
    font-size: 32pt;
    font-weight: 800;
    text-align: center;
    /* display: inline-block; */
    position: absolute;
    vertical-align: middle;
    width: 100%;
    height: 100%;
}

#loaderProgressBar
{
    z-index: 12;
    width: 0%;
    height: 10px;
    bottom: 30px;
    left: 0px;
    position: absolute;
    background: #d0d0d0;
}

/* from Google for Material Icons font:

https://google.github.io/material-design-icons/

*/
@font-face {
    font-family: 'Material Icons';
    font-style: normal;
    font-weight: 400;
    src: url(../assets/fonts/MaterialIcons-Regular.eot); /* For IE6-8 */
    src: local('Material Icons'),
      local('MaterialIcons-Regular'),
      url(../assets/fonts/MaterialIcons-Regular.woff2) format('woff2'),
      url(../assets/fonts/MaterialIcons-Regular.woff) format('woff'),
      url(../assets/fonts/MaterialIcons-Regular.ttf) format('truetype');
  }

.material-icons {
    font-family: 'Material Icons';
    font-weight: normal;
    font-style: normal;
    font-size: 24px;  /* Preferred icon size */
    display: inline-block;
    line-height: 1;
    text-transform: none;
    letter-spacing: normal;
    word-wrap: normal;
    white-space: nowrap;
    direction: ltr;
  
    /* Support for all WebKit browsers. */
    -webkit-font-smoothing: antialiased;
    /* Support for Safari and Chrome. */
    text-rendering: optimizeLegibility;
  
    /* Support for Firefox. */
    -moz-osx-font-smoothing: grayscale;
  
    /* Support for IE. */
    font-feature-settings: 'liga';
  }

#overlay_entity_data
{
    width: 200px;
    height: 200px;
    background-color: #303030;
    color: #d0d0d0;
    position: fixed;
    top: 150px;
    left: 150px;
    visibility: hidden;
}

#overlay_entity_header
{
    color: darkseagreen;
    font-family: 'Questrial', sans-serif; 
    font-weight: 800;
}

.overlay_entity_fieldname
{
    color: #d0d0d0;
    font-family: 'Questrial', sans-serif;    
    font-weight: 600;
}

.overlay_entity_value
{
    color: #d0d0d0;
    font-family: 'Questrial', sans-serif;    
}

.interventionSelector
{
    display:flex;
    justify-content: space-between;
    padding-right:15px;
    margin-top:5px;
    margin-bottom:5px;
}

.legend_header
{
    color: darkseagreen;
    font-family: 'Questrial', sans-serif; 
    font-weight: 800;
    font-size: 18px;    
}

.toggleButton 
{
    width:45%;
    height:30px;
    border: 1px solid white;
    border-radius:5px;
    line-height: 30px;
    text-align: center;
    cursor: default;
}

.buttonActive 
{
    background:#bddbbe;
    color: #303030;
    border-color:white;
}

.listEntryActive
{
    background: #A8A3A3;
    color: #303030 ;
    font-style: bold;
    border-radius: 10pt;
}

ul {
  padding: 0;
  width: 300px;
}

/* List element */
li {
  align-items: left;
  box-sizing: border-box;
}
.groupsTable_grpCell + .groupsTable_nameCell {
  border-top: 1px solid rgba(255,255,255,0.2);
}

.canHaveLock {
    display:flex;
}

.readable {
    line-height:25px;
    font-family: 'Questrial', sans-serif;
    font-size: 12pt;
}

.notClickable {
    pointer-events: none;

}

